@@ -2,6 +2,14 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils-config/ChangeLog,v 1.51 2011/12/05 19:50:48 vapier Exp $
 
+*binutils-config-3-r01.1 (22 Feb 2012)
+
+  22 Feb 2012; Fabian Groffen <grobian@gentoo.org>
+  +binutils-config-3-r01.1.ebuild, -binutils-config-3-r1.ebuild:
+  Bump, fixes a -L manipulation problem that can causes compilation/runtime
+  failures, details see http://sources.gentoo.org/cgi-bin/viewvc.cgi/gentoo-
+  alt?view=revision&revision=1715
+
   15 Feb 2012; Fabian Groffen <grobian@gentoo.org> files/binutils-config-3:
   Fix double Prefix problem (no revbump to prepare getting rid of
   interrevisions)
